[project]
name = "mae-carol-api"
version = "0.1.0"
dependencies = [
    "attrs",
    "Automat",
    "Babel",
    "bcrypt",
    "blinker",
    "certifi",
    "chardet",
    "click",
    "colorama",
    "configobj",
    "constantly",
    "cryptography",
    "git-filter-repo",
    "httplib2",
    "hyperlink",
    "idna",
    "incremental",
    "Jinja2",
    "jsonpatch",
    "jsonpointer",
    "jsonschema",
    "markdown-it-py",
    "MarkupSafe",
    "mdurl",
    "netifaces",
    "oauthlib",
    "pyasn1",
    "pyasn1-modules",
    "pycurl",
    "Pygments",
    "PyHamcrest",
    "PyJWT",
    "pyOpenSSL",
    "pyparsing",
    "pyrsistent",
    "pyserial",
    "pytz",
    "PyYAML",
    "requests",
    "rich",
    "service-identity",
    "setuptools",
    "six",
    "Twisted",
    "typing_extensions",
    "urllib3",
    "wadllib",
    "wheel",
    "zope.interface",
    "gunicorn",
    "flask"
]